# odk-mailer

./: .gitignore  README.md  pyproject.toml
odk_mailer/: before.py  commands.py  main.py
odk_mailer/classes/: config.py  job.py  mail_job.py  mailer.py  odk_api.py  recipients.py
odk_mailer/lib/: __init__.py  config.py  db.py  globals.py  log.py  mail.py  prompts.py  smtp.py  utils.py  validators.py
tests/: test_main.py
tests/data/: invalid.csv  valid.csv
