[tool.poetry]
name = "odk-mailer"
version = "0.1.0"
description = ""
authors = ["tertek <ekin.tertemiz@swisstph.ch>"]
readme = "README.md"

[tool.poetry.scripts]
odk-mailer = "odk_mailer.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.9.0"}
inquirer = "^3.1.4"
email-validator = "^2.1.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
