[tool.poetry]
name = "odk-mailer"
version = "0.2.4"
description = "A simple CLI for sending form related mails in the context of Open Data Kit (ODK) "
authors = ["tertek <ekin.tertemiz@swisstph.ch>"]
readme = "README.md"

[tool.poetry.scripts]
odk-mailer = "odk_mailer.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.9.0"}
inquirer = "^3.1.4"
email-validator = "^2.1.0.post1"
requests = "^2.31.0"
toml = "^0.10.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
